; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_spi_bitbang.c_spi_bitbang_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_spi_bitbang.c_spi_bitbang_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_bitbang = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spi_bitbang_stop(%struct.spi_bitbang* %0) #0 {
  %2 = alloca %struct.spi_bitbang*, align 8
  store %struct.spi_bitbang* %0, %struct.spi_bitbang** %2, align 8
  %3 = load %struct.spi_bitbang*, %struct.spi_bitbang** %2, align 8
  %4 = getelementptr inbounds %struct.spi_bitbang, %struct.spi_bitbang* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @spi_unregister_master(i32 %5)
  %7 = load %struct.spi_bitbang*, %struct.spi_bitbang** %2, align 8
  %8 = getelementptr inbounds %struct.spi_bitbang, %struct.spi_bitbang* %7, i32 0, i32 1
  %9 = call i32 @list_empty(i32* %8)
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i32 @WARN_ON(i32 %12)
  %14 = load %struct.spi_bitbang*, %struct.spi_bitbang** %2, align 8
  %15 = getelementptr inbounds %struct.spi_bitbang, %struct.spi_bitbang* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @destroy_workqueue(i32 %16)
  ret i32 0
}

declare dso_local i32 @spi_unregister_master(i32) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @list_empty(i32*) #1

declare dso_local i32 @destroy_workqueue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
